# ProyectoElItacate

./: .env.example  Base_de_Conocimiento_Chef_IA.docx  Desafio.css  Ingredientes.docx  Manual_Generacion_Recetas_Chef_IA.docx  README.md  pyproject.toml  requirements.txt
documentos word/: Biblioteca_de_Recetas_Chef_IA.docx  Politicas_de_Uso_El_Itacate.docx  Presentacion_Proyecto_El_Itacate.docx  Prompt_Maestro_Chef_IA.docx
html/: Desafio.html  Desafio.js
src/chef_ia/: __init__.py  __main__.py  agent.py  cli.py  document_loader.py  docx_reader.py  ingredient_catalog.py  knowledge.py  models.py  retriever.py  service.py  settings.py  web_server.py
tests/: test_knowledge.py  test_web_server.py
