[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "chef-ia-el-itacate"
version = "0.1.0"
description = "Agente local que interpreta los documentos de El Itacate."
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "El Itacate"}]
dependencies = [
    "langchain==1.3.14",
    "langchain-cohere==0.6.0",
    "langchain-text-splitters==1.1.2",
    "pypdf==6.14.2",
    "python-docx==1.2.0",
    "pandas==3.0.3",
    "openpyxl==3.1.5",
    "python-pptx==1.0.2",
    "python-dotenv==1.2.2",
]

[project.scripts]
chef-ia = "chef_ia.cli:main"
chef-ia-web = "chef_ia.web_server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
